@@ -88,6 +88,20 @@ dd { padding-bottom: 15px }
       			$("#s16b").dropdownchecklist("destroy");
 				$("#div16b").hide(); 
 			} );
+			
+            $("#s17").dropdownchecklist( { width: 200 } );
+            $("#s17a").dropdownchecklist( { width: 200, zIndex: 999 } );
+            $("#theAccordian").accordion({ fillSpace: true });
+            $(".rangeSlider").slider({
+                range: true,
+                min: 0,
+                max: 1000,
+                values: [0, 1000]
+            });
+            
+            $("#s18a").dropdownchecklist( { width: 150 } );
+            $("#s18b").dropdownchecklist( { width: 150, maxDropHeight: 200 } );
+			
         });
     </script>
     <meta name="description" 
@@ -410,8 +424,9 @@ dd { padding-bottom: 15px }
 	        <select multiple="multiple">
 				<optgroup label="Letters">
 					<option>A</option>
-					<option>B</option>
-					<option selected="selected">C & D</option>
+					<option>B & C</option>
+					<option selected="selected">D&F</option>
+					<option>Test1&Test2</option>
 				</optgroup>
 	            <optgroup label="Numbers">
 					<option>1</option>
@@ -434,8 +449,9 @@ dd { padding-bottom: 15px }
 	        <select id="s6" class="s6" multiple="multiple">
 				<optgroup label="Letters">
 					<option>A</option>
-					<option>B</option>
-					<option selected="selected">C & D</option>
+					<option>B & C</option>
+					<option selected="selected">D&F</option>
+					<option>Test1&Test2</option>
 				</optgroup>
 	            <optgroup label="Numbers">
 					<option>1</option>
@@ -449,8 +465,9 @@ dd { padding-bottom: 15px }
 	        <select id="s6a" class="s6" multiple="multiple">
 				<optgroup label="Letters">
 					<option>A</option>
-					<option>B</option>
-					<option selected="selected">C & D</option>
+					<option>B & C</option>
+					<option selected="selected">D&F</option>
+					<option>Test1&Test2</option>
 				</optgroup>
 	            <optgroup label="Numbers">
 					<option>1</option>
@@ -1065,12 +1082,13 @@ dd { padding-bottom: 15px }
 		    <h3>DDCL within a hidden parent</h3>
 		    <div>
 		        Initializing a ddcl within a Hidden parent causes the width/height calculation of
-		        the dynamic controls to fails
+		        the dynamic controls to fail.
 		    </div>
 		    <div>
-		    	DDCL could be made smarter in a future version to handle this.
+		    	DDCL should be made smarter in a future version to handle this.
 		    	<br>For now, you can try moving the ddcl initialization into the 'show' processing,
 		    	but watch out for multiple initialization calls.
+		    </div>
 		</td>
 	  </tr>
 	  <tr>
@@ -1114,6 +1132,516 @@ dd { padding-bottom: 15px }
 				</select>
 			</div>
 		</td>
+	  </tr>
+	  
+      <tr>
+      	<td colspan='3'>
+		    <h3>DDCL interaction with other jQuery Widgets</h3>
+		    <div>
+		    	DDCL has shown some <i>interesting</i> interactions with other jQuery widgets.
+		    	<br>
+		        In particular, DDCL's internal calculation of an appropriate z-index does not 
+		        always work well with other widgets on the page. It tries to determine an 
+		        approprite z-index based on parent elements, but does take into account 
+		        siblings with a high z-index value with which it may overlap.
+		        <br>
+		        zIndex is now a configuration option that you can set to an explicit value as needed.
+		    </div>
+		</td>
+	  </tr>
+	  <tr>
+	  	<td colspan='3'>
+    <div id="theAccordian">
+        <h3><a href="#">Accordian Entry 1 - DDCL dropdown <i>beneath</i> the slider</a> </h3>
+        <div>
+            <select id="s17" multiple="multiple">
+                 <option>A</option>
+                 <option>B</option>
+                 <option selected="selected">C</option>
+                 <option>1</option>
+                 <option>2</option>
+                 <option selected="selected">3</option>
+            </select>
+            <div>Sample Range Slider</div>
+            <div id="rangeSlider" class='rangeSlider'></div>
+        </div>
+        <h3><a href="#">Accordian Entry 2 - DDCL dropdown with explicit z-index</a> </h3>
+        <div>
+            <select id="s17a" multiple="multiple">
+                 <option>A</option>
+                 <option>B</option>
+                 <option selected="selected">C</option>
+                 <option>1</option>
+                 <option>2</option>
+                 <option selected="selected">3</option>
+            </select>
+            <div>Sample Range Slider 2</div>
+            <div id="rangeSlider2" class='rangeSlider'></div>
+        </div>
+        <h3><a href="#">Accordian Entry 3</a></h3>
+        <div>
+            Just some contents on item 3
+        </div>
+    </div>
+	  	</td>
+	  </tr>
+	  
+      <tr>
+      	<td colspan='3'>
+		    <h3>Massive count of options</h3>
+		    <div>
+		    	DDCL can reportly drive the browsers wonky if you have a large number of options.
+		    </div>
+		</td>
+	  </tr>
+	  <tr>
+      	<td>
+	  		<span>Large number of options</span><br>
+	        <select id="s18" class="s18" multiple="multiple">
+				<optgroup label="Group 00">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 10">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 20">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 30">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 40">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 50">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 60">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 70">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 80">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 90">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+	        </select>
+	    </td>
+      	<td>
+	  		<span>Large number of options (no max)</span><br>
+	        <select id="s18a" class="s18a" multiple="multiple">
+				<optgroup label="Group 00">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 10">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 20">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 30">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 40">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 50">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 60">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 70">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 80">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 90">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 100">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 110">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 120">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+	        </select>
+	    </td>
+      	<td>
+	  		<span>Large number of options (with maxHeight)</span><br>
+	        <select id="s18b" class="s18b" multiple="multiple">
+				<optgroup label="Group 00">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 10">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 20">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 30">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 40">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 50">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 60">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 70">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 80">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 90">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 100">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 110">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+				<optgroup label="Group 120">
+					<option>0</option>
+					<option>1</option>
+					<option>2</option>
+					<option>3</option>
+					<option>4</option>
+					<option>5</option>
+					<option>6</option>
+					<option>7</option>
+					<option>8</option>
+					<option>9</option>
+				</optgroup>
+	        </select>
+	    </td>
 	  </tr>
     </table>
 </div>
