@@ -8,7 +8,8 @@
 }
 /* Font size of 0 on the -selector and an explicit medium on -text required to eliminate 
    descender problems within the containers and still have a valid size for the text */
-.ui-dropdownchecklist-selector-wrapper {
+.ui-dropdownchecklist-selector-wrapper
+, .ui-widget .ui-dropdownchecklist-selector-wrapper {
 	vertical-align: middle;
 	font-size: 0px;
 }
